<resources>
    <string name="app_name">QuizWiz</string>
    <string name="play_button">Play</string>
    <string name="setting_button">Settings</string>
    <string name="help">Help</string>
    <string name="privacy">Privacy Policy</string>
    <string name="ins1">1) Start the game by pressing the "Play" button</string>
    <string name="ins2">2) You will be presented with a series of 20 multiple-choice questions</string>
    <string name="ins3">3) Read each question carefully and select the answer you believe is correct by clicking on it</string>
    <string name="ins4">4) For every correct answer, you will earn 10 points</string>
    <string name="ins5">5) For every incorrect answer, 5 points will be deducted from your score</string>
    <string name="ins6">7) You have a total of 2 minutes (120 seconds) to answer all 20 questions</string>
    <string name="ins7">8) If you fail to answer all questions within the time limit, the game will automatically end</string>
    <string name="ins8">9) Your final score will be displayed at the end of the game</string>
    <string name="ins9">10) You can choose to replay the game to improve your score or exit the game</string>
    <string name="ins10">6) For every skipped question, 2 points will be deducted from your score</string>
    <string name="score_board">Score board</string>
    <string name="ins_topic">How to play</string>
    <string name="agree">Agreed</string>
    <string name="ex_btn">Exit</string>
    <string name="st_btn">Start</string>
    <string name="pl_name">Player Name</string>
    <string name="ques">1/5</string>
    <string name="question">question</string>
    <string name="timer">01:00</string>
    <string name="Next">Next</string>
    <string name="choose1">choose 1</string>
    <string name="choose2">choose 2</string>
    <string name="choose3">choose 3</string>
    <string name="choose4">choose 4</string>
    <string name="score">Score : </string>
    <string name="congratulations">Congratulations !!!</string>
    <string name="Restart">Restart</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="sb_score">Score</string>
    <string name="hg_score">High Score - </string>
    <string name="Settings">Settings</string>
    <string name="Sound">Sound</string>
    <string name="Dark_Modes">Dark Mode</string>
    <string name="About_Us">About Us</string>
    <string name="Feedback">Feedback</string>
    <string name="QuizWiz">QuizWiz</string>
    <string name="privacy1">This is the privacy policy of our quiz game. We value your privacy and dffff</string>
    <string name="dialog_name">Enter your name</string>
    <string name="privacy_tittle">Privacy Policy</string>
    <string name="personal_information">Personal Information:</string>
    <string name="per_info">• We may collect your name to personalize your gaming experience.</string>
    <string name="per_info2">• Your answers to quiz questions are used to calculate your score.</string>
    <string name="usage_information">Usage Information:</string>
    <string name="use_info1">• We collect device information for optimizing game performance.</string>
    <string name="data_security">Data Security:</string>
    <string name="securi_1">• We use industry-standard security measures to protect your information.</string>
    <string name="contact">Contact us at quizwiz@example.com for any questions.</string>
    <string name="player_name">Player Name</string>
    <string name="_1_5">1/5</string>
    <string name="play_question">question</string>
    <string name="_01_00">01:00</string>
    <string name="next">Next</string>
    <string name="choose_1">choose 1</string>
    <string name="choose_2">choose 2</string>
    <string name="choose_3">choose 3</string>
</resources>