<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Title -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/privacy_tittle"
        android:textColor="@color/btn_blue"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- Personal Information -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/personal_information"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/per_info"
        android:textSize="16sp"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/per_info2"
        android:textSize="16sp"
        android:textColor="@android:color/black"/>

    <!-- Usage Information -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/usage_information"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/use_info1"
        android:textSize="16sp"
        android:textColor="@android:color/black"/>

    <!-- Data Security -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data_security"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/securi_1"
        android:textSize="16sp"
        android:textColor="@android:color/black"/>

    <!-- Contact Information -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="16dp"/>

    <!-- Close Button -->

</LinearLayout>
