<!-- instruction.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- ScrollView to handle long content -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="16dp">

        <!-- Inner LinearLayout to hold TextViews and CheckBox -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- TextViews for instructions -->
            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/ins_topic"
                android:textColor="@color/btn_blue"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/ins1"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/ins2"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/black"
                android:text="@string/ins3"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/black"
                android:text="@string/ins4"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/black"
                android:text="@string/ins5"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/black"
                android:text="@string/ins10"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/black"
                android:text="@string/ins6"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/black"
                android:text="@string/ins7"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/black"
                android:text="@string/ins8"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/ins9"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/agree"
                android:textColor="@color/black"
                android:textColorLink="#4CAF50" />

        </LinearLayout>

    </ScrollView>

    <!-- LinearLayout for buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/exit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="60dp"
            android:layout_weight="1"
            android:backgroundTint="@color/btn_blue"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/ex_btn"
            android:textSize="16sp" />

        <Button
            android:id="@+id/start_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:layout_weight="1"
            android:backgroundTint="@color/btn_blue"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/st_btn"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>