<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_blue"
    tools:context=".PlayActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="394dp"
        android:layout_height="300dp"
        android:background="@drawable/background_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.35"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- TextView to display player name -->
        <TextView
            android:id="@+id/playerNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="19dp"
            android:layout_marginBottom="60dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/player_name"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/text_question"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.278" />

        <TextView
            android:id="@+id/cpt_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/_1_5"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_question"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="@string/play_question"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.826" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/timerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/_01_00"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/btn_blue"
        android:fontFamily="@font/poppins_bold"
        android:padding="12sp"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btn_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <Button
            android:id="@+id/btn_choose1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_style"
            android:fontFamily="@font/poppins_semibold"
            android:onClick="ClickChoose"
            android:text="@string/choose_1"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:backgroundTint="@null"/>

        <Button
            android:id="@+id/btn_choose2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins_semibold"
            android:onClick="ClickChoose"
            android:text="@string/choose_2"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:background="@drawable/btn_style"/>

        <Button
            android:id="@+id/btn_choose3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins_semibold"
            android:onClick="ClickChoose"
            android:text="@string/choose_3"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:background="@drawable/btn_style"/>

        <Button
            android:id="@+id/btn_choose4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins_semibold"
            android:onClick="ClickChoose"
            android:text="choose 4"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:background="@drawable/btn_style"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>