<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/bg_blue">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Linear Layout containing three buttons -->
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="296dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!-- Play button -->
            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/btn_blue"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/play_button"
                android:textColorLink="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <!-- Settings button -->
            <Button
                android:id="@+id/setting_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/btn_blue"
                android:text="@string/setting_button"
                android:textColorLink="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <!-- Scoreboard button -->
            <Button
                android:id="@+id/score_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/btn_blue"
                android:text="@string/score_board"
                android:textColorLink="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Linear Layout containing two TextViews -->
        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <!-- TextView for Privacy -->
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/privacy"
                android:textSize="14sp" />

            <!-- TextView for Help -->
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/help" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
